Main menu fix
Parandasin ära overlapi.

--- a/css/style.css
+++ b/css/style.css
@@ -624,14 +624,15 @@ header.main section.right .hooaeg a.talv {
 nav.main {
   background-color: rgba(0, 173, 255, 0.86);
   width: 100%;
-  height: 45px;
+  height: 40px;
   -webkit-border-radius: 0px 0px 5px 5px;
   -moz-border-radius: 0px 0px 5px 5px;
   border-radius: 0px 0px 5px 5px;
   opacity: 0.9;
   z-index: 1;
-  margin-top: -5px;
+  margin-top: 0px;
   clip: rect(5px 0px 0px 0px);
+  position: relative;
 }
 nav.main ul {
   padding: 0;
@@ -640,8 +641,26 @@ nav.main ul {
   height: 40px;
   list-style-type: none;
   text-align: center;
-  padding-top: 5px;
+  padding-top: 0px;
   white-space: nowrap;
+}
+nav.main ul:after {
+  content: "";
+  height: 5px;
+  width: 5px;
+  background-color: rgba(0, 173, 255, 0.86);
+  position: absolute;
+  right: 0px;
+  top: -5px;
+}
+nav.main ul:before {
+  content: "";
+  height: 5px;
+  width: 5px;
+  background-color: rgba(0, 173, 255, 0.86);
+  position: absolute;
+  left: 0px;
+  top: -5px;
 }
 nav.main ul li {
   height: 40px;
